retactored code