@@ -1,12 +1,12 @@
 package com.example.wag.service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpMethod;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpStatusCodeException;
@@ -16,9 +16,6 @@ import com.example.wag.exception.CustomApiException;
 import com.example.wag.model.CountryDTO;
 import com.example.wag.model.CountryResponse;
 import com.example.wag.service.factory.SizeCategoryFactory;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -26,68 +23,70 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class CountryService {
 
-	private final RestTemplate restTemplate;
+    private final RestTemplate restTemplate;
 
-	public CountryService(RestTemplate restTemplate) {
-		super();
-		this.restTemplate = restTemplate;
-	}
+    public CountryService(RestTemplate restTemplate) {
+        super();
+        this.restTemplate = restTemplate;
+    }
 
-	public CountryDTO getCountryData(String code) {
-		String url = "https://restcountries.com/v3.1/alpha/" + code;
-		try {
-			ResponseEntity<List<Map<String, Object>>> response = restTemplate.exchange(url, HttpMethod.GET, null,
-					new ParameterizedTypeReference<>() {
-					});
+	@Value("${restcountries.api.base-url}")
+	private String baseUrl;
 
-			if (response.getBody() != null && !response.getBody().isEmpty()) {
-				return transformResponse(response.getBody().get(0));
-			}
-		} catch (HttpStatusCodeException e) {
-			String responseBody = e.getResponseBodyAsString();
-			System.out.println("Error response body: " + responseBody);
-			throw new CustomApiException(e.getStatusCode(), responseBody);
-			
-		}
-		return null;
-	}
+	
+	
+	
+    public CountryDTO getCountryData(String code) {
+       // String url = "https://restcountries.com/v3.1/alpha/" + code;
+        try {
+            // Using getForEntity to directly fetch an array of CountryResponse
+            // The API returns a JSON array even for a single country code.
+            ResponseEntity<CountryResponse[]> responseEntity = restTemplate.getForEntity(baseUrl+""+code, CountryResponse[].class);
 
-	private CountryDTO transformResponse(Map<String, Object> countryData) {
-		return new CountryDTO((String) countryData.get("cca2"),
-				(String) ((Map<String, Object>) countryData.get("name")).get("common"),
-				getStringList(countryData, "capital"), (String) countryData.get("region"), getCurrencyList(countryData),
-				getLanguageList(countryData), getStringList(countryData, "borders"),
-				getSizeCategory((Number) countryData.get("population")));
-	}
+            // Check if the response body is not null and contains elements
+            if (responseEntity.getBody() != null && responseEntity.getBody().length > 0) {
+                // The API returns a list, so we take the first element (assuming 'alpha' returns one country)
+                return transformResponse(responseEntity.getBody()[0]);
+            }
+        } catch (HttpStatusCodeException e) {
+            String responseBody = e.getResponseBodyAsString();
+            log.error("Error fetching country data for code {}: {} - {}", code, e.getStatusCode(), responseBody);
+            throw new CustomApiException(e.getStatusCode(), responseBody);
+        } catch (Exception e) {
+            log.error("An unexpected error occurred while fetching country data for code {}: {}", code, e.getMessage(), e);
+            throw new CustomApiException(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error: " + e.getMessage());
+        }
+        return null;
+    }
 
-	private List<String> getStringList(Map<String, Object> data, String key) {
-		Object value = data.get(key);
-		if (value instanceof List<?>) {
-			return ((List<?>) value).stream().filter(String.class::isInstance).map(String.class::cast).toList();
-		}
-		return List.of();
-	}
+    private CountryDTO transformResponse(CountryResponse countryResponse) {
+        log.debug("Transforming CountryResponse: {}", countryResponse);
 
-	private List<String> getCurrencyList(Map<String, Object> data) {
-		Object value = data.get("currencies");
-		if (value instanceof Map<?, ?> currenciesMap) {
-			return new ArrayList<>(
-					currenciesMap.keySet().stream().filter(String.class::isInstance).map(String.class::cast).toList());
-		}
-		return List.of();
-	}
+        // Safely get currency codes (keys of the map)
+        List<String> currencyCodes = Optional.ofNullable(countryResponse.getCurrencies())
+                                            .map(Map::keySet)
+                                            .map(keys -> keys.stream().collect(Collectors.toList()))
+                                            .orElse(List.of());
 
-	private List<String> getLanguageList(Map<String, Object> data) {
-		Object value = data.get("languages");
-		if (value instanceof Map<?, ?> languagesMap) {
-			return new ArrayList<>(
-					languagesMap.values().stream().filter(String.class::isInstance).map(String.class::cast).toList());
-		}
-		return List.of();
-	}
+        // Safely get language names (values of the map)
+        List<String> languageNames = Optional.ofNullable(countryResponse.getLanguages())
+                                            .map(Map::values)
+                                            .map(values -> values.stream().collect(Collectors.toList()))
+                                            .orElse(List.of());
 
-	private String getSizeCategory(Number population) {
-		return population == null ? "UNKNOWN" : SizeCategoryFactory.getSizeCategory(population.longValue());
-	}
+        return new CountryDTO(
+                countryResponse.getCca2(),
+                Optional.ofNullable(countryResponse.getName()).map(CountryResponse.Name::getCommon).orElse("Unknown"),
+                Optional.ofNullable(countryResponse.getCapital()).orElse(List.of()),
+                countryResponse.getRegion(),
+                currencyCodes,
+                languageNames,
+                Optional.ofNullable(countryResponse.getBorders()).orElse(List.of()),
+                getSizeCategory(countryResponse.getPopulation())
+        );
+    }
 
+    private String getSizeCategory(Long population) {
+        return population == null ? "UNKNOWN" : SizeCategoryFactory.getSizeCategory(population);
+    }
 }
